pxc/tests/test_19_thread/thrtest2.px
namespace ttest;
import test_common "";
import thread "";

function void hoge(int x) {
  println(x);
}

multithreaded struct my_thread_obj(int x0, int y0,
  io::system::systemptr const& sys0) {
  int x = x0;
  int y = y0;
  io::system::systemptr sys = sys0;
  function void main() {
    io::standard::stdout_println(sys, "my thread main");
    io::standard::stdout_println(sys, x);
    hoge(y); // error: calling global function
    // io.stdout_println(hoge); // error
    // io::main.stdout_println(y); // error
  }
}

function void test1()
{
  threadptr thr = thread_create(my_thread_obj(123, 456, io::system::system));
  thr.join();
}

test1();
